2010-09-01  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Avoid leaking make flags into testsuite results.
	* tests/defs.m4sh: Unset MFLAGS, MAKEFLAGS, MAKELEVEL, __MKLVL__
	and MAKE_JOBS_FIFO.
	* tests/testsuite.at: Likewise.
	Fixes warnings in test logs when the user uses 'make -jN check'
	and inner $MAKE invocations can't connect to the job server.
	Fixes spurious failures of configure-iface.at and of
	demo-noinst-link tests with BSD and Tru64 make if the user uses
	'make -k', as the exit status of the latter is not reliable.

2010-09-01  Gary V. Vaughan  <gary@gnu.org>

	Remove announce-gen.m4sh and mailnotify.m4sh.
	* libltdl/config/announce-gen.m4sh: Removed.  This script has
	no apparent connection to libtool functionality, and mostly
	duplicates the better maintained gnulib announce-gen script.
	* libltdl/config/mailnotify.sh: Removed. This script was used
	by only clcommit.m4sh and announce-gen.m4sh, both of which are
	now removed too.
	* Makefile.maint (announce-gen, libltdl/config/mailnotify):
	Targets removed.
	* bootstrap: Remove the mailnotify regeneration warning.
	* HACKING (Release Procedure): Remove references to
	announce-gen.
	(Alpha release note template, Full release note template):
	Reinstated from before announce-gen was introduced.

	Remove clcommit.m4sh.
	* clcommit.m4sh: Removed. This script was written to help keep
	ChangeLog and commit messages in sync when committing to CVS,
	and is an anachronism now that Libtool uses git.
	* Makefile.maint (commit): Target removed.
	* bootstrap: Don't generate commit.
	* HACKING (Release Procedure): Adjusted.

2010-08-31  Peter Rosin  <peda@lysator.liu.se>

	archive-in-archive.at passes with Microsoft lib.
	* tests/archive-in-archive.at: Tighten test to check that the desired
	object files are indeed part of the archive. Microsoft lib still
	passes, so remove the expected failure for that case.

	Dump archiver output to the log when testing @file support.